Fix syntax error.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,6 @@ workflows:
     jobs:
       - build
 
-      - deploy_onto_kube
+      - deploy_onto_kube:
           requires:
             - build
