--- a/src/Sample.Web.Api/Sample.Web.Api.csproj
+++ b/src/Sample.Web.Api/Sample.Web.Api.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+     <AssemblyVersion>1.0.0.1</AssemblyVersion>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
