--- a/src/container-api.yml
+++ b/src/container-api.yml
@@ -3,17 +3,19 @@ kind: Deployment
 metadata:
   name: container-api
 spec:
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
         app: container-api-app
     spec:
       containers:
-      - name: container-api
-        image: akseastus.azurecr.io/sample/container-api
-        ports:
+        - name: container-api
+          image: akseastus.azurecr.io/sample/container-api
+          ports:
             - containerPort: 80
+      imagePullSecrets:
+        - name: aksregistry
 ---
 apiVersion: v1
 kind: Service
