installing azure cli

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,10 +1,11 @@
 steps:
 
 - bash: |
-    apt-get update -y && apt-get install -y python libssl-dev libffi-dev python-dev build-essential
-    curl -L https://azurecliprod.blob.core.windows.net/install.py -o install.py
-    printf "/usr/azure-cli\n/usr/bin" | python install.py
+    #apt-get update -y && apt-get install -y python libssl-dev libffi-dev python-dev build-essential
+    #curl -L https://azurecliprod.blob.core.windows.net/install.py -o install.py
+    #printf "/usr/azure-cli\n/usr/bin" | python install.py
     az --version
+    docker --version
   displayName: Install Azure Cli
 
 - bash: |
@@ -17,7 +18,7 @@ steps:
   displayName: Working directory
   
 - bash: |
-    dotnet restore src
+    dotnet restore src,
     dotnet build src
     dotnet test src/Sample.Tests
     dotnet publish src/Sample.Web.Api/Sample.Web.Api.csproj -c Release -f netcoreapp2.0
