--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -50,7 +50,8 @@ phases:
       az provider register -n Microsoft.ContainerService
       az aks install-cli
       az aks get-credentials --resource-group $RESOURCE_GROUP --name $CLUSTER_NAME
-      kubectl rolling-update container-api -f src/container-api.yml
+      kubectl create -f src/container-api.yml
+      #kubectl rolling-update container-api -f src/container-api.yml
     
 #- phase: Deploy_Windows
 #  queue: Hosted VS2017 (Hosted VS2017)
