configured app yaml to use rolling updates

--- a/src/container-api.yml
+++ b/src/container-api.yml
@@ -4,6 +4,8 @@ metadata:
   name: container-api
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
